# dagster

examples/deploy_docker/: docker-compose.yml
examples/docs_projects/project_llm_fine_tune/: pyproject.toml
examples/docs_projects/project_mini/: pyproject.toml
examples/docs_projects/project_mini/src/project_mini/defs/resource_caching/: expensive_resource_pickle.py  resources.py
examples/docs_projects/project_mini/tests/: test_resource_caching.py  test_shared.py
examples/docs_projects/project_prompt_eng/: pyproject.toml
examples/docs_projects/project_prompt_eng/tests/: test_promp_eng.py
