[project]
name = "project_prompt_eng"
version = "0.0.1"
description = "Project Prompt Engineering"
readme = "README.md"
requires-python = ">=3.9,<3.14"
dependencies = [
    "dagster",
    "dagster-dg-cli",
    "dagster-anthropic",
    "pydantic",
    "requests",
]

[dependency-groups]
dev = [
    "pytest",
    "dagster-webserver",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "project_mini"
registry_modules = [
    "project_prompt_eng.components.*",
]
